# sdlBoard

./: .gitignore  CMakeLists.txt  README.md
src/: Application.cpp  Application.h  Board.cpp  Board.h  Core.h  Piece.cpp  Piece.h  Window.cpp  Window.h  main.cpp
